--- a/static/css/post_job.css
+++ b/static/css/post_job.css
@@ -46,7 +46,6 @@
   display: flex;
   align-items: center;
   position: relative;
-  width: 50%;
   flex-flow: row-wrap;
   transition: 0.3s;
 } 
@@ -75,6 +74,7 @@
 
 .post_card_content > .post_card_ds > p{
   margin-bottom: 5px;
+  margin-right: 14px;
   font-size: 1rem;
   font-weight: 400;
   color: #818189;
@@ -102,14 +102,14 @@
     background-color: #4a935d ;
 }
 
-.table > .card_view_details {
+.table .card_view_details {
   border: 0;
   background-color: #acc1f7;
   color: white;
-  padding: 5px;
+  padding: 0px 5px;
   border-radius: 3px;
 }
 
-.table > .card_view_details:hover {
+.table .card_view_details:hover {
   background-color: #899ac6;
 }
