--- a/templates/post_job.html
+++ b/templates/post_job.html
@@ -20,8 +20,8 @@
                     <p class="post_card_com"> Company : {{ data[i]['company_name'] }}</p>
                     <div class="post_card_ds">
                       <p class="post_card_salary"><i class="fas fa-rupee-sign"></i> Salary : {{ data[i]['salary'] }}</p>
-                      &nbsp;&nbsp;&nbsp;&nbsp;
                       <p class="post_card_date"><i class="far fa-calendar-alt"></i> Due Date : {{ data[i]['last_date'] }}</p>
+                      <p class="post_card_date"><i class="fa-solid fa-person"></i> Applied Candidates: {{ data[i]['applied_count'] }}</p>
                     </div>
                     <p class="post_card_buttons">
                       <button id="{{ data[i]['job_id'] }}" class="view_candidates" data-bs-toggle='modal' data-bs-target='#view_candidates'>Applied Candidates</button>
